test/fail/lval_paren.min
program start
    number x;
    (x) := 1;
end
